--- a/pom.xml
+++ b/pom.xml
@@ -43,5 +43,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.alibaba.fastjson2/fastjson2 -->
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>2.0.16</version>
+        </dependency>
+
     </dependencies>
 </project>
